bench/tests/plans/snapshots/r#mod__plans__bsbm_explore__BSBM Explore - Q10 (Execution Plan, PlainTerm).snap
---
source: bench/tests/plans/bsbm_explore.rs
expression: "&string"
---
ProjectionExec: expr=[first_value(offer) ORDER BY [AS_SORTABLE_BYTES(xsd:double(ENC_TF(STR(price)))) ASC NULLS FIRST, offer ASC NULLS FIRST, price ASC NULLS FIRST]@3 as offer, first_value(price) ORDER BY [AS_SORTABLE_BYTES(xsd:double(ENC_TF(STR(price)))) ASC NULLS FIRST, offer ASC NULLS FIRST, price ASC NULLS FIRST]@4 as price]
  SortExec: TopK(fetch=10), expr=[AS_SORTABLE_BYTES(xsd:double(ENC_TF(STR(price))))@0 ASC, offer@1 ASC, price@2 ASC], preserve_partitioning=[false], sort_prefix=[AS_SORTABLE_BYTES(xsd:double(ENC_TF(STR(price))))@0 ASC]
    AggregateExec: mode=Single, gby=[__common_expr_1@0 as AS_SORTABLE_BYTES(xsd:double(ENC_TF(STR(price)))), offer@1 as offer, price@2 as price], aggr=[first_value(offer) ORDER BY [AS_SORTABLE_BYTES(xsd:double(ENC_TF(STR(price)))) ASC NULLS FIRST, offer ASC NULLS FIRST, price ASC NULLS FIRST], first_value(price) ORDER BY [AS_SORTABLE_BYTES(xsd:double(ENC_TF(STR(price)))) ASC NULLS FIRST, offer ASC NULLS FIRST, price ASC NULLS FIRST]], ordering_mode=PartiallySorted([0])
      ProjectionExec: expr=[AS_SORTABLE_BYTES(xsd:double(ENC_TF(STR(price@1)))) as __common_expr_1, offer@0 as offer, price@1 as price]
        SortExec: expr=[AS_SORTABLE_BYTES(xsd:double(ENC_TF(STR(price@1)))) ASC], preserve_partitioning=[false]
          ProjectionExec: expr=[offer@0 as offer, price@2 as price]
            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(offer@0, offer@0)], projection=[offer@0, deliveryDays@1, price@2, date@4]
              HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(offer@0, offer@0)], projection=[offer@0, deliveryDays@1, price@3]
                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(offer@0, offer@0)], projection=[offer@0, deliveryDays@2]
                  HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(vendor@1, vendor@0)], projection=[offer@0]
                    HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(offer@0, offer@0), (vendor@1, vendor@1)], projection=[offer@0, vendor@1]
                      HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(offer@0, offer@0)], projection=[offer@0, vendor@2]
                        ProjectionExec: expr=[subject@0 as offer]
                          FilterExec: graph@0 IS NULL AND predicate@2 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product,data_type:,language_tag:} AND object@3 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer7/Product296,data_type:,language_tag:}, projection=[subject@1]
                            ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer7/Product296>], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[graph, subject, predicate, object], output_ordering=[graph@0 ASC, predicate@2 ASC, object@3 ASC, subject@1 ASC], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product,data_type:,language_tag:} AND object@3 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer7/Product296,data_type:,language_tag:}, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product,data_type:,language_tag:} AND {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product,data_type:,language_tag:} <= predicate_max@2 AND object_null_count@7 != row_count@4 AND object_min@5 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer7/Product296,data_type:,language_tag:} AND {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer7/Product296,data_type:,language_tag:} <= object_max@6, required_guarantees=[object in ({term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer7/Product296,data_type:,language_tag:}), predicate in ({term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product,data_type:,language_tag:})]
                        ProjectionExec: expr=[subject@0 as offer, object@1 as vendor]
                          FilterExec: graph@0 IS NULL AND predicate@2 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/vendor,data_type:,language_tag:}, projection=[subject@1, object@3]
                            ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/vendor> ?vendor], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[graph, subject, predicate, object], output_ordering=[graph@0 ASC, predicate@2 ASC, object@3 ASC, subject@1 ASC], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/vendor,data_type:,language_tag:}, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/vendor,data_type:,language_tag:} AND {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/vendor,data_type:,language_tag:} <= predicate_max@2, required_guarantees=[predicate in ({term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/vendor,data_type:,language_tag:})]
                      ProjectionExec: expr=[subject@0 as offer, object@1 as vendor]
                        FilterExec: graph@0 IS NULL AND predicate@2 = {term_type:0,value:http://purl.org/dc/elements/1.1/publisher,data_type:,language_tag:}, projection=[subject@1, object@3]
                          ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?offer <http://purl.org/dc/elements/1.1/publisher> ?vendor], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[graph, subject, predicate, object], output_ordering=[graph@0 ASC, predicate@2 ASC, object@3 ASC, subject@1 ASC], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = {term_type:0,value:http://purl.org/dc/elements/1.1/publisher,data_type:,language_tag:}, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= {term_type:0,value:http://purl.org/dc/elements/1.1/publisher,data_type:,language_tag:} AND {term_type:0,value:http://purl.org/dc/elements/1.1/publisher,data_type:,language_tag:} <= predicate_max@2, required_guarantees=[predicate in ({term_type:0,value:http://purl.org/dc/elements/1.1/publisher,data_type:,language_tag:})]
                    ProjectionExec: expr=[subject@0 as vendor]
                      FilterExec: graph@0 IS NULL AND predicate@2 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/country,data_type:,language_tag:} AND object@3 = {term_type:0,value:http://downlode.org/rdf/iso-3166/countries#US,data_type:,language_tag:}, projection=[subject@1]
                        ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?vendor <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/country> <http://downlode.org/rdf/iso-3166/countries#US>], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[graph, subject, predicate, object], output_ordering=[graph@0 ASC, predicate@2 ASC, object@3 ASC, subject@1 ASC], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/country,data_type:,language_tag:} AND object@3 = {term_type:0,value:http://downlode.org/rdf/iso-3166/countries#US,data_type:,language_tag:}, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/country,data_type:,language_tag:} AND {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/country,data_type:,language_tag:} <= predicate_max@2 AND object_null_count@7 != row_count@4 AND object_min@5 <= {term_type:0,value:http://downlode.org/rdf/iso-3166/countries#US,data_type:,language_tag:} AND {term_type:0,value:http://downlode.org/rdf/iso-3166/countries#US,data_type:,language_tag:} <= object_max@6, required_guarantees=[object in ({term_type:0,value:http://downlode.org/rdf/iso-3166/countries#US,data_type:,language_tag:}), predicate in ({term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/country,data_type:,language_tag:})]
                  ProjectionExec: expr=[subject@0 as offer, object@1 as deliveryDays]
                    FilterExec: EBV(LEQ(ENC_TF(object@3), 4:4:3)) AND graph@0 IS NULL AND predicate@2 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/deliveryDays,data_type:,language_tag:}, projection=[subject@1, object@3]
                      ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/deliveryDays> ?deliveryDays], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[graph, subject, predicate, object], output_ordering=[graph@0 ASC, predicate@2 ASC, object@3 ASC, subject@1 ASC], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/deliveryDays,data_type:,language_tag:}, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/deliveryDays,data_type:,language_tag:} AND {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/deliveryDays,data_type:,language_tag:} <= predicate_max@2, required_guarantees=[predicate in ({term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/deliveryDays,data_type:,language_tag:})]
                ProjectionExec: expr=[subject@0 as offer, object@1 as price]
                  FilterExec: graph@0 IS NULL AND predicate@2 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price,data_type:,language_tag:}, projection=[subject@1, object@3]
                    ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price> ?price], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[graph, subject, predicate, object], output_ordering=[graph@0 ASC, predicate@2 ASC, object@3 ASC, subject@1 ASC], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price,data_type:,language_tag:}, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price,data_type:,language_tag:} AND {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price,data_type:,language_tag:} <= predicate_max@2, required_guarantees=[predicate in ({term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price,data_type:,language_tag:})]
              ProjectionExec: expr=[subject@0 as offer, object@1 as date]
                FilterExec: EBV(GT(ENC_TF(object@3), 5:{date_time_type:0,value:63349516800.000000000000000000,offset:})) AND graph@0 IS NULL AND predicate@2 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/validTo,data_type:,language_tag:}, projection=[subject@1, object@3]
                  ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/validTo> ?date], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[graph, subject, predicate, object], output_ordering=[graph@0 ASC, predicate@2 ASC, object@3 ASC, subject@1 ASC], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/validTo,data_type:,language_tag:}, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/validTo,data_type:,language_tag:} AND {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/validTo,data_type:,language_tag:} <= predicate_max@2, required_guarantees=[predicate in ({term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/validTo,data_type:,language_tag:})]
