bench/tests/plans/snapshots/r#mod__plans__bsbm_explore__BSBM Explore - Q10 (Execution Plan, String).snap
---
source: bench/tests/plans/bsbm_explore.rs
expression: "&string"
---
ProjectionExec: expr=[ENC_PT(first_value(offer) ORDER BY [AS_SORTABLE_BYTES(xsd:double(ENC_TF(STR(ENC_PT(price))))) ASC NULLS FIRST, offer ASC NULLS FIRST, price ASC NULLS FIRST]@3) as offer, ENC_PT(first_value(price) ORDER BY [AS_SORTABLE_BYTES(xsd:double(ENC_TF(STR(ENC_PT(price))))) ASC NULLS FIRST, offer ASC NULLS FIRST, price ASC NULLS FIRST]@4) as price]
  SortExec: TopK(fetch=10), expr=[AS_SORTABLE_BYTES(xsd:double(ENC_TF(STR(ENC_PT(price)))))@0 ASC, offer@1 ASC, price@2 ASC], preserve_partitioning=[false], sort_prefix=[AS_SORTABLE_BYTES(xsd:double(ENC_TF(STR(ENC_PT(price)))))@0 ASC]
    AggregateExec: mode=Single, gby=[__common_expr_1@0 as AS_SORTABLE_BYTES(xsd:double(ENC_TF(STR(ENC_PT(price))))), offer@1 as offer, price@2 as price], aggr=[first_value(offer) ORDER BY [AS_SORTABLE_BYTES(xsd:double(ENC_TF(STR(ENC_PT(price))))) ASC NULLS FIRST, offer ASC NULLS FIRST, price ASC NULLS FIRST], first_value(price) ORDER BY [AS_SORTABLE_BYTES(xsd:double(ENC_TF(STR(ENC_PT(price))))) ASC NULLS FIRST, offer ASC NULLS FIRST, price ASC NULLS FIRST]], ordering_mode=PartiallySorted([0])
      ProjectionExec: expr=[AS_SORTABLE_BYTES(xsd:double(ENC_TF(STR(ENC_PT(price@1))))) as __common_expr_1, offer@0 as offer, price@1 as price]
        SortExec: expr=[AS_SORTABLE_BYTES(xsd:double(ENC_TF(STR(ENC_PT(price@1))))) ASC], preserve_partitioning=[false]
          ProjectionExec: expr=[offer@0 as offer, price@2 as price]
            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(vendor@0, vendor@1), (offer@1, offer@0)], projection=[offer@1, deliveryDays@2, price@3, date@4]
              HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(offer@1, offer@0)], projection=[vendor@0, offer@1, deliveryDays@2, price@3, date@5]
                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(offer@1, offer@0)], projection=[vendor@0, offer@1, deliveryDays@2, price@4]
                  HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(offer@1, offer@0)], projection=[vendor@0, offer@1, deliveryDays@3]
                    HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(offer@1, offer@0)], projection=[vendor@0, offer@1]
                      HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(vendor@0, vendor@1)], projection=[vendor@0, offer@1]
                        ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?vendor <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/country> <http://downlode.org/rdf/iso-3166/countries#US>], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.zstd.parquet:0..17880018]]}, projection=[subject@1 as vendor], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/country> AND object@3 = <http://downlode.org/rdf/iso-3166/countries#US>, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/country> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/country> <= predicate_max@2 AND object_null_count@7 != row_count@4 AND object_min@5 <= <http://downlode.org/rdf/iso-3166/countries#US> AND <http://downlode.org/rdf/iso-3166/countries#US> <= object_max@6, required_guarantees=[object in (<http://downlode.org/rdf/iso-3166/countries#US>), predicate in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/country>)]
                        ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/vendor> ?vendor], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.zstd.parquet:0..17880018]]}, projection=[subject@1 as offer, object@3 as vendor], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/vendor> AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/vendor> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/vendor> <= predicate_max@2, required_guarantees=[predicate in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/vendor>)]
                      ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer7/Product296>], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.zstd.parquet:0..17880018]]}, projection=[subject@1 as offer], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product> AND object@3 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer7/Product296> AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product> <= predicate_max@2 AND object_null_count@7 != row_count@4 AND object_min@5 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer7/Product296> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer7/Product296> <= object_max@6, required_guarantees=[object in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer7/Product296>), predicate in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product>)]
                    FilterExec: EBV(LEQ(ENC_TF(ENC_PT(deliveryDays@1)), 4:4:3))
                      ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/deliveryDays> ?deliveryDays], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.zstd.parquet:0..17880018]]}, projection=[subject@1 as offer, object@3 as deliveryDays], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/deliveryDays> AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/deliveryDays> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/deliveryDays> <= predicate_max@2, required_guarantees=[predicate in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/deliveryDays>)]
                  ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price> ?price], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.zstd.parquet:0..17880018]]}, projection=[subject@1 as offer, object@3 as price], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price> AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price> <= predicate_max@2, required_guarantees=[predicate in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price>)]
                FilterExec: EBV(GT(ENC_TF(ENC_PT(date@1)), 5:{date_time_type:0,value:63349516800.000000000000000000,offset:}))
                  ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/validTo> ?date], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.zstd.parquet:0..17880018]]}, projection=[subject@1 as offer, object@3 as date], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/validTo> AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/validTo> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/validTo> <= predicate_max@2, required_guarantees=[predicate in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/validTo>)]
              ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?offer <http://purl.org/dc/elements/1.1/publisher> ?vendor], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.zstd.parquet:0..17880018]]}, projection=[subject@1 as offer, object@3 as vendor], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://purl.org/dc/elements/1.1/publisher> AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://purl.org/dc/elements/1.1/publisher> AND <http://purl.org/dc/elements/1.1/publisher> <= predicate_max@2, required_guarantees=[predicate in (<http://purl.org/dc/elements/1.1/publisher>)]
