bench/tests/plans/snapshots/r#mod__plans__bsbm_explore__BSBM Explore - Q10 (Optimized, PlainTerm).snap
---
source: bench/tests/plans/bsbm_explore.rs
expression: "&explanation.optimized_logical_plan.to_string()"
---
Projection: first_value(offer) ORDER BY [AS_SORTABLE_BYTES(xsd:double(ENC_TF(STR(price)))) ASC NULLS FIRST, offer ASC NULLS FIRST, price ASC NULLS FIRST] AS offer, first_value(price) ORDER BY [AS_SORTABLE_BYTES(xsd:double(ENC_TF(STR(price)))) ASC NULLS FIRST, offer ASC NULLS FIRST, price ASC NULLS FIRST] AS price
  Sort: AS_SORTABLE_BYTES(xsd:double(ENC_TF(STR(price)))) ASC NULLS FIRST, offer ASC NULLS FIRST, price ASC NULLS FIRST, fetch=10
    Aggregate: groupBy=[[__common_expr_1 AS AS_SORTABLE_BYTES(xsd:double(ENC_TF(STR(price)))), offer, price]], aggr=[[first_value(offer) ORDER BY [__common_expr_1 AS AS_SORTABLE_BYTES(xsd:double(ENC_TF(STR(price)))) ASC NULLS FIRST, offer ASC NULLS FIRST, price ASC NULLS FIRST] AS first_value(offer) ORDER BY [AS_SORTABLE_BYTES(xsd:double(ENC_TF(STR(price)))) ASC NULLS FIRST, offer ASC NULLS FIRST, price ASC NULLS FIRST], first_value(price) ORDER BY [__common_expr_1 AS AS_SORTABLE_BYTES(xsd:double(ENC_TF(STR(price)))) ASC NULLS FIRST, offer ASC NULLS FIRST, price ASC NULLS FIRST] AS first_value(price) ORDER BY [AS_SORTABLE_BYTES(xsd:double(ENC_TF(STR(price)))) ASC NULLS FIRST, offer ASC NULLS FIRST, price ASC NULLS FIRST]]]
      Projection: AS_SORTABLE_BYTES(xsd:double(ENC_TF(STR(price)))) AS __common_expr_1, offer, price
        Sort: AS_SORTABLE_BYTES(xsd:double(ENC_TF(STR(price)))) ASC NULLS FIRST
          BasicGraphPattern: projection=[offer, price], filters=[EBV(LEQ(ENC_TF(deliveryDays), Union 4:4:3)) AND EBV(GT(ENC_TF(date), Union 5:{date_time_type:0,value:63349516800.000000000000000000,offset:})) AS EBV(BOOLEAN_AS_TERM(EBV(LEQ(ENC_TF(deliveryDays),ENC_TF(Struct({term_type:2,value:3,data_type:http://www.w3.org/2001/XMLSchema#integer,language_tag:})))) AND EBV(GT(ENC_TF(date),ENC_TF(Struct({term_type:2,value:2008-06-20T00:00:00,data_type:http://www.w3.org/2001/XMLSchema#dateTime,language_tag:}))))))]
            QuadPattern: triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer7/Product296>]
            QuadPattern: triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/vendor> ?vendor]
            QuadPattern: triple_pattern=[?offer <http://purl.org/dc/elements/1.1/publisher> ?vendor]
            QuadPattern: triple_pattern=[?vendor <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/country> <http://downlode.org/rdf/iso-3166/countries#US>]
            QuadPattern: triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/deliveryDays> ?deliveryDays]
            QuadPattern: triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price> ?price]
            QuadPattern: triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/validTo> ?date]
