bench/tests/plans/snapshots/r#mod__plans__bsbm_explore__BSBM Explore - Q11 (Execution Plan, ObjectId).snap
---
source: bench/tests/plans/bsbm_explore.rs
expression: "&string"
---
DecodeObjectIdsExec: projections=[decode(property) as property, decode(hasValue) as hasValue, decode(isValueOf) as isValueOf]
  UnionExec
    ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor1/Offer1250> ?property ?hasValue], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GSPO/delta-parquet-file.parquet]]}, projection=[predicate@2 as property, object@3 as hasValue, NULL as isValueOf], file_type=parquet, predicate=graph@0 IS NULL AND subject@1 = 28075, pruning_predicate=graph_null_count@0 > 0 AND subject_null_count@3 != row_count@4 AND subject_min@1 <= 28075 AND 28075 <= subject_max@2, required_guarantees=[subject in (28075)]
    ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?isValueOf ?property <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor1/Offer1250>], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GOSP/delta-parquet-file.parquet]]}, projection=[predicate@2 as property, NULL as hasValue, subject@1 as isValueOf], file_type=parquet, predicate=graph@0 IS NULL AND object@3 = 28075, pruning_predicate=graph_null_count@0 > 0 AND object_null_count@3 != row_count@4 AND object_min@1 <= 28075 AND 28075 <= object_max@2, required_guarantees=[object in (28075)]
